Fix PortalGradeService for Java 17: use get(0) instead of getFirst()
Co-authored-by: Cursor <cursoragent@cursor.com>